[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
homepage = "https://beboundless.xyz/"
repository = "https://github.com/boundless-xyz/steel/"

[workspace.dependencies]
# Intra-workspace dependencies
risc0-op-steel = { path = "crates/op-steel", default-features = false }
risc0-steel = { path = "crates/steel", default-features = false }

# Alloy guest dependencies
alloy-consensus = { version = "1.0" }
alloy-eips = { version = "1.0" }
alloy-evm = { version = "0.18" }
alloy-rlp = { version = "0.3.8" }
alloy-primitives = { version = "1.3" }
alloy-rpc-types = { version = "1.0" }
alloy-sol-types = { version = "1.3" }

# OP Steel
alloy-op-evm = { version = "0.18" }
op-alloy-network = { version = "0.18" }

# Alloy host dependencies
alloy = { version = "1.0", default-features = false }
alloy-trie = { version = "0.8" }

# Beacon chain support
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus.git", rev = "ade5ce6c4a19107c1059e5338d8f18855bd2d931" }

anyhow = { version = "1.0" }
bincode = { version = "1.3" }
enumn = "0.1"
log = "0.4"
revm = { version = "28.0", default-features = false, features = ["std"] }
op-revm = { version = "9.0", default-features = false, features = ["std"] }
serde = "1.0"
serde_json = "1.0"
sha2 = { version = "0.10" }
test-log = "0.2.15"
thiserror = { version = "2.0" }
tokio = { version = "1.35" }
url = { version = "2.5" }
